se agrega nuevos campos y con ello validaciones